<resources>
    <string name="app_name">Hiking Itinerary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- Added default strings to use throughout the app -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_addTrip">Location:</string>
    <string name="startDate_addTrip">Start Date:</string>
    <string name="endDate_addTrip">End Date:</string>
    <string name="tripOrganizer_addTrip">Trip Organizer:</string>
    <string name="participants_addTrip">Participants:</string>
    <string name="numOfDays_addTrip">No. Of Days:</string>
    <string name="accommodations_addTrip">Accommodations:</string>
    <string name="dailyBreakdown_addTrip">Daily Breakdown:</string>
    <string name="hikeName_summary">Hike Name:</string>
    <string name="hikesCompleted_summary">Hikes Completed:</string>
    <string name="kilometers_summary">Kilometers:</string>
    <string name="miles_summary">Miles:</string>
    <string name="numOfDayHikes_summary">No. of Day Hikes:</string>
    <string name="bagHikes">Bag Hikes:</string>
    <string name="bagNights">No. of Bag Nights:</string>
    <string name="distance">Distance:</string>
    <string name="contactInfo">Contact Info:</string>
    <string name="reminders">Reminders:</string>
    <string name="wildlifeSeen">Wildlife Seen:</string>
    <string name="highlights">Highlights:</string>
    <string name="title_mainscreen">Hiking Itinerary</string>
    <string name="title_pastHike">Completed Hikes</string>
    <string name="title_future_trips">Future Trips</string>
    <string name="title_completed_trips">Completed Trips</string>

    <string name="hike_title">Hikes</string>
    <string name="hikeName_addTrip">Hike Name:</string>
    <string name="numOfDayHikes_addTrip">No. Of Day Hikes:</string>
    <string name="numOfBagNights_addTrip">No. Of Bag Nights:</string>
    <string name="distance_addTrip">Distance:</string>
    <string name="contactInfo_addTrip">Contact Info:</string>
    <string name="title_contactUs">Contact Us</string>
    <string name="message_contactUs">We hope you are enjoying the app and it is helping you on your adventures!</string>
    <string name="message2_contactUs">If you want to ask questions or give us suggestions, please reach us at:</string>
    <string name="email">rnbhikingitinerary@gmail.com</string>
    <string name="title_credits">Credits</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
