<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_addTrip">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:padding="@dimen/padding_addTrip"
            android:text="@string/hikeName_summary"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/edit_hike_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/main_edittext"
            android:inputType="text"
            android:padding="@dimen/padding_addTrip"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_addTrip">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:padding="@dimen/padding_addTrip"
            android:text="@string/numOfDayHikes_summary"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/edit_number_of_day_hikes"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/main_edittext"
            android:inputType="number"
            android:padding="@dimen/padding_addTrip"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_addTrip">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:padding="@dimen/padding_addTrip"
            android:text="@string/bagNights"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/edit_number_of_bag_nights"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/main_edittext"
            android:inputType="number"
            android:padding="@dimen/padding_addTrip"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_addTrip">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:padding="@dimen/padding_addTrip"
            android:text="@string/distance"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/edit_distance"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:background="@drawable/main_edittext"
            android:inputType="number"
            android:padding="@dimen/padding_addTrip"
            android:text="" />
        <com.suke.widget.SwitchButton
            android:id="@+id/switch_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_addTrip">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:padding="@dimen/padding_addTrip"
            android:text="@string/contactInfo"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/edit_contact_info"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/main_edittext"
            android:inputType="text"
            android:padding="@dimen/padding_addTrip"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_addTrip">
        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="left|center"
            android:padding="@dimen/padding_addTrip"
            android:text="@string/dailyBreakdown_addTrip"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/textSize" />
        <EditText
            android:id="@+id/edit_daily_breakdown"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/main_edittext"
            android:gravity="left"
            android:padding="@dimen/padding_addTrip"
            android:text="" />
    </LinearLayout>
</LinearLayout>