<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stclaircollege.rnb.hikingapp.SummaryFragment">

    <TextView
        android:id="@+id/summaryTitle"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="Summary"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/titleTextSize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hikesCompletedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/summaryTitle"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginTop="31dp"
        android:layout_weight="1"
        android:padding="@dimen/padding_addTrip"
        android:text="@string/hikesCompleted_summary"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/hikesCompleted"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/hikesCompletedLabel"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:layout_toEndOf="@+id/noOfBagNightsLabel"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/summaryTextSize" />

    <TextView
        android:id="@+id/kilometersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/hikesCompletedLabel"
        android:layout_below="@+id/hikesCompletedLabel"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:padding="@dimen/padding_addTrip"
        android:text="@string/kilometers_summary"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/kilometers"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/kilometersLabel"
        android:layout_alignStart="@+id/hikesCompleted"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/summaryTextSize" />

    <TextView
        android:id="@+id/milesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/kilometersLabel"
        android:layout_alignStart="@+id/kilometersLabel"
        android:layout_below="@+id/kilometersLabel"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:padding="@dimen/padding_addTrip"
        android:text="@string/miles_summary"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/miles"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/noOfDayHikesLabel"
        android:layout_alignStart="@+id/kilometers"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/summaryTextSize" />

    <TextView
        android:id="@+id/noOfDayHikesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/milesLabel"
        android:layout_below="@+id/milesLabel"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:padding="@dimen/padding_addTrip"
        android:text="@string/numOfDayHikes_summary"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/noOfDayHikes"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/noOfBagNightsLabel"
        android:layout_alignStart="@+id/miles"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/summaryTextSize" />

    <TextView
        android:id="@+id/noOfBagNightsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/noOfDayHikesLabel"
        android:layout_below="@+id/noOfDayHikesLabel"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="29dp"
        android:padding="@dimen/padding_addTrip"
        android:text="@string/bagHikes"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/noOfBagNights"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/noOfBagNightsLabel"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:layout_toEndOf="@+id/noOfBagNightsLabel"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/summaryTextSize" />

</RelativeLayout>
